<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/panel_border"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/panel_padding">

    <EditText
        android:id="@+id/hostInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_weight="1.2"
        android:background="@drawable/input_field"
        android:hint="@string/host_hint"
        android:imeOptions="actionNext"
        android:inputType="textUri"
        android:paddingHorizontal="@dimen/spacing_sm"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted"
        android:textSize="@dimen/text_body" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/spacing_xs"
        android:layout_weight="0.8"
        android:background="@drawable/input_field"
        android:hint="@string/username_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="@dimen/spacing_sm"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted"
        android:textSize="@dimen/text_body" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="0dp"
        android:layout_height="@dimen/input_height"
        android:layout_marginStart="@dimen/spacing_xs"
        android:layout_weight="0.8"
        android:background="@drawable/input_field"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/spacing_sm"
        android:singleLine="true"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_muted"
        android:textSize="@dimen/text_body" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reloadButton"
        style="@style/Widget.ChannelTracer.Button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/spacing_xs"
        android:background="@drawable/btn_secondary"
        android:minWidth="52dp"
        android:text="@string/reload"
        android:textColor="@color/text_primary"
        app:backgroundTint="@null" />
</LinearLayout>
